# cpp20modules

./: CMakeLists.txt  modc.cpp
modules/: hello.ixx  hermath.ixx  holyshit.ixx  mymath.ixx
